--- a/package.json
+++ b/package.json
@@ -12,11 +12,20 @@
     "@types/node": "20.2.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "contentlayer": "^0.3.2",
+    "date-fns": "^2.30.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "mdx-bundler": "^9.2.1",
     "next": "13.4.3",
+    "next-contentlayer": "^0.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "rehype-highlight": "^6.0.0",
+    "remark-gfm": "^3.0.1",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "sass": "^1.62.1"
   }
 }
