feat: table of contents added

--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@types/node": "20.2.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "clsx": "^1.2.1",
@@ -24,6 +23,7 @@
     "mdx-bundler": "^9.2.1",
     "next": "13.4.3",
     "next-contentlayer": "^0.3.2",
+    "parameterize-js": "^1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "rehype-highlight": "^6.0.0",
